Updated src path for logo images

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         </div>
         <div class="navbar__bottom">
             <div class="navbar__inner">
-                <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg"
+                <a href="index.html"><img class="navbar-inner__logo" src="/images/box-white.svg"
                         alt="Company Logo"></a>
                 <input class="burger-btn" type="checkbox" id="burger-btn" />
                 <label class="burger-label" for="burger-btn">
@@ -159,7 +159,7 @@
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCYGtIp3Q8_8w0TL5HfZ1fxDSSfnk0bes&callback=initMap">
     </script>
-    <script src="/src/scripts/app.js" async defer></script>
+    <script src="/scripts/app.js" async defer></script>
 </body>
 
 </html>
