--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <script src="/src/scripts/app.js" async defer></script>
+    <script src="scripts/app.js" async defer></script>
 </body>
 
 </html>
