--- a/sitemap.html
+++ b/sitemap.html
@@ -48,7 +48,7 @@
         </div>
         <div class="navbar__bottom">
             <div class="navbar__inner">
-                <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg"
+                <a href="index.html"><img class="navbar-inner__logo" src="/images/box-white.svg"
                         alt="Company Logo"></a>
                 <input class="burger-btn" type="checkbox" id="burger-btn" />
                 <label class="burger-label" for="burger-btn">
@@ -139,7 +139,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <script src="/src/scripts/app.js" async defer></script>
+    <script src="/scripts/app.js" async defer></script>
 </body>
 
 </html>
