--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         </div>
         <div class="navbar__bottom">
             <div class="navbar__inner">
-                <a href="index.html"><img class="navbar-inner__logo" src="/images/box-white.svg"
+                <a href="index.html"><img class="navbar-inner__logo" src="images/box-white.svg"
                         alt="Company Logo"></a>
                 <input class="burger-btn" type="checkbox" id="burger-btn" />
                 <label class="burger-label" for="burger-btn">
