Updated src path for logo images

--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCYGtIp3Q8_8w0TL5HfZ1fxDSSfnk0bes&callback=initMap">
     </script>
-    <script src="/scripts/app.js" async defer></script>
+    <script src="scripts/app.js" async defer></script>
 </body>
 
 </html>
