--- a/student.html
+++ b/student.html
@@ -202,7 +202,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <script src="/scripts/app.js" async defer></script>
+    <script src="scripts/app.js" async defer></script>
 </body>
 
 </html>
