--- a/sitemap.html
+++ b/sitemap.html
@@ -89,10 +89,14 @@
     <footer class="footer">
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="Phone icon">
-                <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
-                <span>info@company.com</span>
+                <a href="tel:+01273123456">
+                    <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="Phone icon">
+                    <span>028 90 111 111</span>
+                </a>
+                <a href="mailto:somone@example.com">
+                    <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
+                    <span>info@company.com</span>
+                </a>
             </div>
             <div class="footer__top__right">
                 <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt="Facebook icon"></a>
