Updated company name / metadata

--- a/business.html
+++ b/business.html
@@ -10,32 +10,32 @@
     <!--METADATA-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Self Storage Theme | Business Storage</title>
+    <title>The Storage Nook | Business Storage</title>
     <meta name="author" content="Liam McAllister">
     <meta name="keywords" content="Storage, Self Storage, Belfast, Garage, Storage Units" />
     <meta name="description" content="Northern Ireland's leading self storage company.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--OPENGRAPH METADATA-->
     <meta property="og:locale" content="en_GB">
-    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:title" content="The Storage Nook | Business Storage" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Northern Ireland's leading self storage company.">
-    <meta property="og:url" content="http://www.fakeaddress.com" />
-    <meta property="og:site_name" content="Storage Company" />
+    <meta property="og:url" content="http://www.thestoragenook.com" />
+    <meta property="og:site_name" content="The Storage Nook" />
     <meta property="og:image" content="" />
     <meta property="og:image:type" content="image/jpg">
     <!--TWITTER METADATA-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:title" content="The Storage Nook | Business Storage" />
     <meta property="og:description" content="Northern Ireland's leading self storage company." />
-    <meta property="og:url" content="http://www.fakeaddress.com" />
-    <meta name="twitter:site" content="@storagecompany" />
+    <meta property="og:url" content="http://www.thestoragenook.com" />
+    <meta name="twitter:site" content="@thestoragenook" />
     <meta property="og:image" content="" />
     <meta name="twitter:creator" content="@liammcallister" />
     <!--STYLESHEETS-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/css/reset.css">
-    <link rel="stylesheet" href="styles/css/styles.css">
+    <link rel="stylesheet" href="src/styles/css/reset.css">
+    <link rel="stylesheet" href="src/styles/css/styles.css">
 </head>
 
 <body class="grid">
@@ -71,7 +71,7 @@
         <div class="storage__inner">
             <div class="storage__inner__info">
                 <h1>Business Storage</h1>
-                <p>At Storage Company, we provide a wide range of secure self storage units for household customers.
+                <p>At The Storage Nook, we provide a wide range of secure self storage units for business customers.
                     Our promise to always be the cheapest means you’ll always get a great rate, and
                     our flexible approach means that you can store with us for as little as one week. You can also
                     change your storage unit size whenever you need to. Give us a call and talk to our friendly
@@ -136,7 +136,7 @@
 
     <div class="security">
         <h3>Security</h3>
-        <p>Here at Storage Company we take security seriously. Your belongings are securely stored at all times in a
+        <p>Here at The Storage Nook we take security seriously. Your belongings are securely stored at all times in a
             fortified premises monitored by CCTV, intruder alarm, fire detection systems.</p>
         <p>We have staff on site at our facility, seven days a week during office opening hours. As well as
             helping to make your life easier, they're fully trained to spot – and react to – any suspicious behaviour or
@@ -195,8 +195,9 @@
             </div>
         </div>
         <div class="footer__bottom">
-            <small>&copy; Storage Company 2020</small>
-            <small>Website created by <a href="#">Liam McAllister</a></small>
+            <small>&copy; 2021 The Storage Nook</small>
+            <small>Website created by <a href="https://liammcallister.co.uk/" target="_blank">Liam
+                    McAllister</a></small>
         </div>
     </footer>
 
@@ -206,7 +207,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <script src="scripts/app.js" async defer></script>
+    <script src="src/scripts/app.js" async defer></script>
 </body>
 
 </html>
