--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
     <!--METADATA-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Self Storage Theme | Home</title>
+    <title>The Storage Nook | Home</title>
     <meta name="author" content="Liam McAllister">
     <meta name="keywords" content="Storage, Self Storage, Belfast, Garage, Storage Units" />
     <meta name="description" content="Northern Ireland's leading self storage company.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--OPENGRAPH METADATA-->
     <meta property="og:locale" content="en_GB">
-    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:title" content="The Storage Nook | Belfast" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Northern Ireland's leading self storage company.">
-    <meta property="og:url" content="http://www.fakeaddress.com" />
-    <meta property="og:site_name" content="Storage Company" />
+    <meta property="og:url" content="http://www.thestoragenook.com" />
+    <meta property="og:site_name" content="The Storage Nook" />
     <meta property="og:image" content="" />
     <meta property="og:image:type" content="image/jpg">
     <!--TWITTER METADATA-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:title" content="The Storage Nook | Belfast" />
     <meta property="og:description" content="Northern Ireland's leading self storage company." />
-    <meta property="og:url" content="http://www.fakeaddress.com" />
-    <meta name="twitter:site" content="@storagecompany" />
+    <meta property="og:url" content="http://www.thestoragenook.com" />
+    <meta name="twitter:site" content="@thestoragenook" />
     <meta property="og:image" content="" />
     <meta name="twitter:creator" content="@liammcallister" />
     <!--STYLESHEETS-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/css/reset.css">
-    <link rel="stylesheet" href="styles/css/styles.css">
+    <link rel="stylesheet" href="src/styles/css/reset.css">
+    <link rel="stylesheet" href="src/styles/css/styles.css">
 </head>
 
 <body class="grid">
@@ -174,7 +174,7 @@
                 <p>We strive to make storing your valued possessions simple and easy, which is why we offer convenient
                     storage solutions for every need, at a price you’ll love.</p>
                 <p>Whether you need a self storage unit for storing household, business or student items, you’ll find
-                    exactly what you need at Storage Company. You can stay for as long as you want; we offer 50% off
+                    exactly what you need at The Storage Nook. You can stay for as long as you want; we offer 50% off
                     for up to 8 weeks for short term storage, or 20% discount on any long term storage. Get a free quote
                     today.</p>
             </div>
@@ -280,8 +280,9 @@
             </div>
         </div>
         <div class="footer__bottom">
-            <small>&copy; Storage Company 2020</small>
-            <small>Website created by <a href="#">Liam McAllister</a></small>
+            <small>&copy; 2021 The Storage Nook</small>
+            <small>Website created by <a href="https://liammcallister.co.uk/" target="_blank">Liam
+                    McAllister</a></small>
         </div>
     </footer>
 
@@ -291,7 +292,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <script src="scripts/app.js" async defer></script>
+    <script src="src/scripts/app.js" async defer></script>
 </body>
 
 </html>
