--- a/404.html
+++ b/404.html
@@ -17,25 +17,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--OPENGRAPH METADATA-->
     <meta property="og:locale" content="en_GB">
-    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:title" content="Page 404: File Not Found" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Northern Ireland's leading self storage company.">
-    <meta property="og:url" content="http://www.fakeaddress.com" />
-    <meta property="og:site_name" content="Storage Company" />
+    <meta property="og:url" content="http://www.thestoragenook.com" />
+    <meta property="og:site_name" content="The Storage Nook" />
     <meta property="og:image" content="" />
     <meta property="og:image:type" content="image/jpg">
     <!--TWITTER METADATA-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:title" content="Page 404: File Not Found" />
     <meta property="og:description" content="Northern Ireland's leading self storage company." />
-    <meta property="og:url" content="http://www.fakeaddress.com" />
-    <meta name="twitter:site" content="@storagecompany" />
+    <meta property="og:url" content="http://www.thestoragenook.com" />
+    <meta name="twitter:site" content="@thestoragenook" />
     <meta property="og:image" content="" />
     <meta name="twitter:creator" content="@liammcallister" />
     <!--STYLESHEETS-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/css/reset.css">
-    <link rel="stylesheet" href="styles/css/styles.css">
+    <link rel="stylesheet" href="src/styles/css/reset.css">
+    <link rel="stylesheet" href="src/styles/css/styles.css">
 </head>
 
 <body class="grid">
@@ -52,8 +52,6 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-    <script src="scripts/app.js" async defer></script>
 </body>
 
 </html>
