--- a/contact.html
+++ b/contact.html
@@ -10,32 +10,32 @@
     <!--METADATA-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Self Storage Theme | Contact Us</title>
+    <title>The Storage Nook | Contact</title>
     <meta name="author" content="Liam McAllister">
     <meta name="keywords" content="Storage, Self Storage, Belfast, Garage, Storage Units" />
     <meta name="description" content="Northern Ireland's leading self storage company.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--OPENGRAPH METADATA-->
     <meta property="og:locale" content="en_GB">
-    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:title" content="The Storage Nook | Contact" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Northern Ireland's leading self storage company.">
-    <meta property="og:url" content="http://www.fakeaddress.com" />
-    <meta property="og:site_name" content="Storage Company" />
+    <meta property="og:url" content="http://www.thestoragenook.com" />
+    <meta property="og:site_name" content="The Storage Nook" />
     <meta property="og:image" content="" />
     <meta property="og:image:type" content="image/jpg">
     <!--TWITTER METADATA-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:title" content="The Storage Nook | Contact" />
     <meta property="og:description" content="Northern Ireland's leading self storage company." />
-    <meta property="og:url" content="http://www.fakeaddress.com" />
-    <meta name="twitter:site" content="@storagecompany" />
+    <meta property="og:url" content="http://www.thestoragenook.com" />
+    <meta name="twitter:site" content="@thestoragenook" />
     <meta property="og:image" content="" />
     <meta name="twitter:creator" content="@liammcallister" />
     <!--STYLESHEETS-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/css/reset.css">
-    <link rel="stylesheet" href="styles/css/styles.css">
+    <link rel="stylesheet" href="src/styles/css/reset.css">
+    <link rel="stylesheet" href="src/styles/css/styles.css">
 </head>
 
 <body class="grid">
@@ -156,8 +156,9 @@
             </div>
         </div>
         <div class="footer__bottom">
-            <small>&copy; Storage Company 2020</small>
-            <small>Website created by <a href="#">Liam McAllister</a></small>
+            <small>&copy; 2021 The Storage Nook</small>
+            <small>Website created by <a href="https://liammcallister.co.uk/" target="_blank">Liam
+                    McAllister</a></small>
         </div>
     </footer>
 
@@ -170,7 +171,7 @@
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCYGtIp3Q8_8w0TL5HfZ1fxDSSfnk0bes&callback=initMap">
         </script>
-    <script src="scripts/app.js" async defer></script>
+    <script src="src/scripts/app.js" async defer></script>
 </body>
 
 </html>
