Installed gulp / minified css/js

--- a/404.html
+++ b/404.html
@@ -36,10 +36,12 @@
     <meta name="twitter:site" content="@thestoragenook" />
     <meta property="og:image" content="" />
     <meta name="twitter:creator" content="@liammcallister" />
-    <!--STYLESHEETS-->
+    <!--CDN's-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/styles/css/reset.css">
-    <link rel="stylesheet" href="src/styles/css/styles.css">
+    <!--STYLESHEETS-->
+    <!-- <link rel="stylesheet" href="src/styles/css/reset.css">
+    <link rel="stylesheet" href="src/styles/css/styles.css"> -->
+    <link rel="stylesheet" href="build/styles/styles.min.css">
 </head>
 
 <body class="grid">
