--- a/quote.html
+++ b/quote.html
@@ -36,10 +36,12 @@
     <meta name="twitter:site" content="@thestoragenook" />
     <meta property="og:image" content="" />
     <meta name="twitter:creator" content="@liammcallister" />
-    <!--STYLESHEETS-->
+    <!--CDN's-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/styles/css/reset.css">
-    <link rel="stylesheet" href="src/styles/css/styles.css">
+    <!--STYLESHEETS-->
+    <!-- <link rel="stylesheet" href="src/styles/css/reset.css">
+    <link rel="stylesheet" href="src/styles/css/styles.css"> -->
+    <link rel="stylesheet" href="build/styles/styles.min.css">
 </head>
 
 <body class="grid">
@@ -47,13 +49,12 @@
     <nav class="navbar">
         <div class="navbar__top">
             <div class="navbar__inner">
-                <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+                <p>Want to speak with a human? <span class="navbar__inner__phone">Call: 028 90 111 111</span></p>
             </div>
         </div>
         <div class="navbar__bottom">
             <div class="navbar__inner">
-                <a href="index.html"><img class="navbar-inner__logo" src="images/box-white.svg"
-                        alt="Company Logo"></a>
+                <a href="index.html"><img class="navbar-inner__logo" src="images/box-white.svg" alt="Company Logo"></a>
                 <input class="burger-btn" type="checkbox" id="burger-btn" />
                 <label class="burger-label" for="burger-btn">
                     <span class="bar top"></span>
@@ -151,7 +152,7 @@
                 </a>
                 <a href="mailto:somone@example.com">
                     <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
-                    <span>info@company.com</span>
+                    <span>info@thestoragenook.com</span>
                 </a>
             </div>
             <div class="footer__top__right">
@@ -200,8 +201,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <script src="src/scripts/app.js" async defer></script>
-    <script src="src/scripts/validate.js" async defer></script>
+    <!-- <script src="src/scripts/validate.js" async defer></script>
+    <script src="src/scripts/app.js" async defer></script> -->
+    <script src="build/scripts/validate.min.js" async defer></script>
+    <script src="build/scripts/app.min.js" async defer></script>
 </body>
 
 </html>
